chore: add job service

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,7 @@ DEBUG=true
 AUTO_MIGRATE_DB=true
 
 LOCAL_STORAGE_PATH="/tmp"
+INPUT_BUCKET_NAME="bucket-for-study"
+OUTPUT_BUCKET_NAME="bucket-for-study"
+CONCURRENCY_UPLOAD=50
 GOOGLE_APPLICATION_CREDENTIALS="/go/src/bucket-credential.json"
