chore: add queue framework

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,16 @@ LOCAL_STORAGE_PATH="/tmp"
 INPUT_BUCKET_NAME="bucket-for-study"
 OUTPUT_BUCKET_NAME="bucket-for-study"
 CONCURRENCY_UPLOAD=50
+
+RABBITMQ_DEFAULT_USER=rabbitmq
+RABBITMQ_DEFAULT_PASS=rabbitmq
+RABBITMQ_DEFAULT_HOST=rabbit
+RABBITMQ_DEFAULT_PORT=5672
+RABBITMQ_DEFAULT_VHOST=/
+RABBITMQ_CONSUMER_NAME=app-name
+RABBITMQ_CONSUMER_QUEUE_NAME=videos
+RABBITMQ_NOTIFICATION_EX=amq.direct
+RABBITMQ_NOTIFICATION_ROUTING_KEY=jobs
+RABBITMQ_DLX=dlx
+
 GOOGLE_APPLICATION_CREDENTIALS="/go/src/bucket-credential.json"
