chore: add job manager service

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ LOCAL_STORAGE_PATH="/tmp"
 INPUT_BUCKET_NAME="bucket-for-study"
 OUTPUT_BUCKET_NAME="bucket-for-study"
 CONCURRENCY_UPLOAD=50
+CONCURRENCY_WORKERS=1
 
 RABBITMQ_DEFAULT_USER=rabbitmq
 RABBITMQ_DEFAULT_PASS=rabbitmq
